--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,25 +56,23 @@ p, h2, h3 {
     box-shadow: 4px 6px rgb(184, 5, 5);
 }
 
-/**cards**/
-.card{
-    padding-top: 0.3rem;
-    padding-bottom: 0.3rem;
-    text-align: center;
-    background-color: lightgrey;
-    border-radius: 10px;
+/**past/on going tables**/
+#competitionDisplay{
+	display: flex;
+	justify-content: space-between;
 }
 
-.card h5 {
+h5 {
 	color: black;
 }
 
- /**form create competition**/
- form[name=competition_form]{
- padding: 0.5rem;
- margin: 0 auto;
- 
- }
+/**form create competition**/
+form[name=competition_form]{
+padding: 0.5rem;
+margin: 0 auto;
+
+}
+
 #competition_form label{
 	margin-right: 1rem;
 	font-size: 1.2rem;
@@ -88,15 +86,16 @@ p, h2, h3 {
 	font-size: 1.3rem;
 }
 
-  .news:hover .cat{
-    background:#0085FF;
-    color:white;
-  }
+ .news:hover .cat{
+   background:#0085FF;
+   color:white;
+ }
 
-  .carta{
-      padding-right: 0;
-      padding-left: 0;
-  }
+ .carta{
+     padding-right: 0;
+     padding-left: 0;
+ }
+ 
 /**footer**/
 footer {
     background-color: #354141;
