--- a/templates/mapbox.html.twig
+++ b/templates/mapbox.html.twig
@@ -14,7 +14,7 @@
             accessToken: mapboxgl.accessToken
         });
         mapboxClient.geocoding.forwardGeocode({
-                query: {{ location }},
+                query: "{{ location }}",
                 autocomplete: false,
                 limit: 1
             })
