--- a/templates/Competition/create.html.twig
+++ b/templates/Competition/create.html.twig
@@ -2,44 +2,63 @@
 
 {% block body %}
 
-    <main class="container">
-    <div class="row create">
-    	<form method="POST">
-    	{{ error }}
-          <div class="form-group">
-            <label for="name">*Competition name : </label>
-            <input type="text" class="form-control" name="name">
-          </div>
-          <div class="form-group form-check">
-            <input type="checkbox" class="form-check-input" name="homeVisitor">
-            <label class="form-check-label" for="homeVisitor">Home/Visitor</label>
-          </div>
-          <div class="form-group">
-            <label for="location">Location : </label>
-            <input type="text" class="form-control" name="location">
-          </div>
-          <div class="form-group">
-            <label for="tag">Tag : </label>
-            <div id="tags">
-            	<input type="text" class="form-control" name="tag1" id="tag1">
-            </div>
-            <button class="btn btn-success" id="btnTag" type="button">+</button>
-            <button class="btn btn-danger" id="btnTagRemove" type="button">-</button>
-          </div>
-          <div class="form-group">
-            <label for="competitor">*Competitors : </label>
-            <div id=competitors>
-            	<input type="text" class="form-control" name="competitor1" id="competitor1">
-            	<input type="text" class="form-control" name="competitor2" id="competitor2">
-            </div>
-            <button class="btn btn-success" id="btnCompetitor">+</button>
-            <button class="btn btn-danger" id="btnCompetitorRemove">-</button>
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-          <input type="hidden" name="tagData" id="tagData" />
-          <input type="hidden" name="competitorData" id="competitorData" />
-        </form>
-    </div>
-    </main>
+<main class="container">
+<div class="row create">
+	<form method="POST">
+		{{ error }}
+		<div class="form-group">
+			<label for="name">*Competition name : </label> <input type="text"
+				class="form-control" name="name" value="{{ app.request.request.get('name')|default('') }}">
+		</div>
+		<div class="form-group form-check">
+			<input type="checkbox" class="form-check-input" name="homeVisitor"  
+			{%  if app.request.request.get('homeVisitor') != null %} checked {%  endif %}>
+			<label class="form-check-label" for="homeVisitor">Home/Visitor</label>
+		</div>
+		<div class="form-group">
+			<label for="location">Location : </label> <input type="text"
+				class="form-control" name="location" value="{{ app.request.request.get('location')|default('') }}">
+		</div>
+		<div class="form-group">
+			<label for="tag">Tag : </label>
+			<div id="tags">
+				{% if app.request.request.get('tagData', 1) > 1 %}
+				{% for iterator in range(1, app.request.request.get('tagData', 1)) %}
+				<input type="text" class="form-control" name="tag{{ iterator }}"
+					id="tag{{ iterator }}"
+					value="{{ app.request.request.get('tag' ~ iterator)|default('') }}">
+				{% endfor %}
+				{% else %}
+				<input type="text" class="form-control" name="tag1" id="tag1">
+				{% endif %}
+			</div>
+			<button class="btn btn-success" id="btnTag" type="button">+</button>
+			<button class="btn btn-danger" id="btnTagRemove" type="button">-</button>
+		</div>
+		<div class="form-group">
+			<label for="competitor">*Competitors : </label>
+			<div id=competitors>
+				{% if app.request.request.get('competitorData', 1) > 1 %}
+				{% for iterator in range(1, app.request.request.get('competitorData', 1)) %}
+				<input type="text" class="form-control"
+					name="competitor{{ iterator }}" id="competitor{{ iterator }}"
+					value="{{ app.request.request.get('competitor' ~ iterator)|default('') }}">
+				{% endfor %}
+				{% else %}
+				<input type="text" class="form-control" name="competitor1"
+					id="competitor1"> <input type="text" class="form-control"
+					name="competitor2" id="competitor2">
+				{% endif %}
+			</div>
+			<button class="btn btn-success" id="btnCompetitor">+</button>
+			<button class="btn btn-danger" id="btnCompetitorRemove">-</button>
+		</div>
+		<button type="submit" class="btn btn-primary">Submit</button>
+		<input type="hidden" name="tagData" id="tagData" value="{{ app.request.request.get('tagData',1) }}"/> 
+		<input type="hidden" name="competitorData" id="competitorData" 
+			value="{{ app.request.request.get('competitorData',2) }}" />
+	</form>
+</div>
+</main>
 
 {% endblock %}
