--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="container-fluid fixed-bottom">
+<footer class="container-fluid">
 	<hr>
 	<div class="row copy">
 		<p>&copy;LeagueMaker 2018 - WebForce3</p>
