--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -15,9 +15,11 @@
         		<a class="nav-link" href="{{ path("about") }}">{{ 'About' }}</a>
       		</li>
       		
+      		{% if is_granted('ROLE_ADMIN') %}
       		<li class="nav-item{% if route == 'secretAdministration' %} active{% endif %}">
         		<a class="nav-link" href="{{ path("easyadmin") }}" target="_blank">{{ 'Administration'|trans }}</a>
       		</li>
+      		{% endif %}
       		
       		{% if not is_granted('IS_AUTHENTICATED_FULLY') %}
       		<li class="nav-item{% if route == 'fos_user_registration_register' %} active{% endif %}">
