--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -8,7 +8,7 @@
 			</div>
 			<div class="col-sm-5">
 				<h4>LeagueMaker</h4>
-				<p>Create your competition!</p>
+				<p>Create homemade competitions with ease!</p>
 			</div>
 		</div>
 	</header>
