--- a/templates/Competition/create.html.twig
+++ b/templates/Competition/create.html.twig
@@ -4,10 +4,19 @@
 
 <main class="container">
 <div class="row create">
-	<form method="POST">
-		{{ error }}
+	<form method="POST" id="createForm">
+		
+		<div >
+			{% if error!="" %}
+			<button type="button" class="btn btn-danger">
+			<i class="fas fa-exclamation-circle"></i> : {{ error }}
+			{% endif %}
+			</button>
+		</div>
+		<br>
+		
 		<div class="form-group">
-			<label for="name">*Competition name : </label> <input type="text"
+			<label for="name">* Competition name : </label> <input type="text"
 				class="form-control" name="name" value="{{ app.request.request.get('name')|default('') }}">
 		</div>
 		<div class="form-group form-check">
@@ -36,7 +45,7 @@
 			<button class="btn btn-danger" id="btnTagRemove" type="button">-</button>
 		</div>
 		<div class="form-group">
-			<label for="competitor">*Competitors : </label>
+			<label for="competitor">* Competitors : </label>
 			<div id=competitors>
 				{% if app.request.request.get('competitorData', 1) > 1 %}
 				{% for iterator in range(1, app.request.request.get('competitorData', 1)) %}
@@ -57,6 +66,10 @@
 		<input type="hidden" name="tagData" id="tagData" value="{{ app.request.request.get('tagData',1) }}"/> 
 		<input type="hidden" name="competitorData" id="competitorData" 
 			value="{{ app.request.request.get('competitorData',2) }}" />
+		<br>
+		</br>
+		
+		<p>* : These fields are mandatory</p>
 	</form>
 </div>
 </main>
