--- a/templates/bundles/FOSUserBundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content.html.twig
@@ -25,7 +25,7 @@
             
             	<div id="userLinks">
                 	<input type="submit" class="btn btn-primary" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
-                	<a class="nav-link" href="{{ path('fos_user_registration_register') }}">->Register</a>
+                	<a class="nav-link btn btn-info" id="logRegister" href="{{ path('fos_user_registration_register') }}">Register</a>
                 </div>
             </form>
         </div>
