--- a/public/css/style.css
+++ b/public/css/style.css
@@ -283,6 +283,10 @@ footer {
 	display: block;
 }
 
+#logRegister {
+	color: white;
+}
+
 #remember_me {
 	margin-top: 10px;
 }
@@ -293,7 +297,6 @@ footer {
 }
 
 #userLinks a {
-	color: black;
 }
 
 /**SearchResults**/
