epic updates inc son

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -308,7 +308,7 @@ footer {
 #information {
 	margin-bottom: 30px;
 	margin-top: 30px;
-	border: 3px solid rgb(184, 5, 5);
+	border: 3px solid #4E5D6C;
 	border-radius: 1rem;
 	padding: 10px;
 	text-align: center;
