--- a/public/css/style.css
+++ b/public/css/style.css
@@ -265,9 +265,17 @@ margin: 0 auto;
 /**footer**/
 footer {
     background-color: #4E5D6C;
-    margin-top: 100px;    
+    margin-top: 100px;
+    padding: 0rem;
+    position: fixed;
+    bottom: 0px;
+    
     /* Maybe: position: fixed-bottom; */ 
 } 
+
+#footer p{
+	margin-bottom: 0px;
+}
 
 /**Register**/
 #registerTitle {
