--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,34 +1,27 @@
 @media (min-width: 300px) and (max-width: 767.98px) {
 
-    .logo{
-        width: 3rem;
-    }
+	.logo {
+		width: 3rem;
+	}
 
-    .container .create {
-        width: 100%;
-    }
+	.container .create {
+		width: 100%;
+	}
 
-    .container .carta{
-        padding-bottom: 3rem;
-    }
-    
-}
-@media (min-width: 768px) and (max-width: 991.98px) { 
+	.container .carta {
+		padding-bottom: 3rem;
+	}
 
 }
 
-@media (min-width: 992px) and (max-width: 1199.98px) { 
-    
-}
-
- body {
-    margin: 0;
-    padding: 0;
-    background-color: #455050;
+body {
+	margin: 0;
+	padding: 0;
+	background-color: #455050;
 }
 
 main {
-    color: #ffffff;
+	color: #ffffff;
 }
 
 #image {
@@ -37,7 +30,7 @@ main {
 }
 
 .navbar {
-    background-color: #455050;
+	background-color: #455050;
 }
 
 .navbar ul li a:hover {
@@ -45,19 +38,21 @@ main {
 	border: 3px solid rgb(184, 5, 5);
 }
 
-p, h2, h3 {
-    color: #ffffff;
-    text-shadow: rgb(184, 5, 5) 2px 2px 3px;
+p,
+h2,
+h3 {
+	color: #ffffff;
+	text-shadow: rgb(184, 5, 5) 2px 2px 3px;
 }
 
- header {
-    background-color: #354141;
-    margin-bottom: 1rem;
-    box-shadow: 4px 6px rgb(184, 5, 5);
+header {
+	background-color: #354141;
+	margin-bottom: 1rem;
+	box-shadow: 4px 6px rgb(184, 5, 5);
 }
 
 /**past/on going tables**/
-#competitionDisplay{
+#competitionDisplay {
 	display: flex;
 	justify-content: space-between;
 }
@@ -67,40 +62,40 @@ h5 {
 }
 
 /**form create competition**/
-form[name=competition_form]{
-padding: 0.5rem;
-margin: 0 auto;
+form[name=competition_form] {
+	padding: 0.5rem;
+	margin: 0 auto;
 
 }
 
-#competition_form label{
+#competition_form label {
 	margin-right: 1rem;
 	font-size: 1.2rem;
 }
 
-#competition_form_submit{
-	
+#competition_form_submit {
+
 	margin-top: 1rem;
 	padding: 0.7rem;
 	border-radius: 1rem;
 	font-size: 1.3rem;
 }
 
- .news:hover .cat{
-   background:#0085FF;
-   color:white;
- }
+.news:hover .cat {
+	background: #0085FF;
+	color: white;
+}
 
- .carta{
-     padding-right: 0;
-     padding-left: 0;
- }
- 
+.carta {
+	padding-right: 0;
+	padding-left: 0;
+}
+
 /**footer**/
 footer {
-    background-color: #354141;
-    box-shadow: 4px 6px rgb(184, 5, 5);
-} 
+	background-color: #354141;
+	box-shadow: 4px 6px rgb(184, 5, 5);
+}
 
 /**Register**/
 #registerTitle {
@@ -161,7 +156,7 @@ footer {
 
 /**SearchResults**/
 #search {
-	margin-top: 10px;	
+	margin-top: 10px;
 }
 
 /**Information for new users**/
@@ -184,4 +179,33 @@ footer {
 
 #information ul li b {
 	color: black;
+}
+
+#about {
+	margin-top: 2rem;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+}
+
+#about div {
+	width: 85%;
+}
+
+#about img {
+	height: 230px;
+	width: 230px;
+
+}
+
+@media (min-width: 992px) {
+	#about div {
+		width: 50%;
+	}
+
+	#about img {
+		height: 450px;
+		width: 450px;
+
+	}
 }
