--- a/public/css/customBackend.css
+++ b/public/css/customBackend.css
@@ -3,33 +3,29 @@
 }
 
 .content-header-title{
-	color: red;
+	color: #004000;
 }
 
 .list-user, .edit-user{
-	background-color: #00ff80;
+	background-color: #d3d3d3;
 }
 
 .list-competition, .edit-competition{
-	background-color: #00ff80;
+	background-color: #d3d3d3;
 }
 
 .list-tag, .edit-tag{
-	background-color: #00ff80;
+	background-color: #d3d3d3;
 }
 
 .main-sidebar{
-	background-color: #4646ff;
-}
-
-.sidebar{
-	background-color: #8080ff;
+	background-color: #a8a8a8;
 }
 
 .content{
-	background-color: #00ffff;
+	background-color: #79bcff;
 }
 
 .datagrid thead{
-	background-color: #00ffff;
+	background-color: #79bcff;
 }
