--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,16 +1,16 @@
 @media (min-width: 300px) and (max-width: 767.98px) {
 
-	.logo {
-		width: 3rem;
-	}
+    .logo {
+        width: 3rem;
+    }
 
-	.container .create {
-		width: 100%;
-	}
+    .container .create {
+        width: 100%;
+    }
 
-	.container .carta {
-		padding-bottom: 3rem;
-	}
+    .container .carta {
+        padding-bottom: 3rem;
+    }
 
 }
 
@@ -19,245 +19,247 @@ body {
     padding: 0 0 10vh 0px;
 }
 
-main {
-	
-}
+main {}
 
 #image {
-	width: 70px;
-	height: 70px;
+    width: 70px;
+    height: 70px;
 }
 
 .navbar {
 
-	margin-bottom: 50px;
-	padding: 0px;
+    margin-bottom: 50px;
+    padding: 0px;
 }
 
 .navbar ul li a:hover {
-	background-color: #f0ad4e;
+    background-color: #f0ad4e;
 }
 
-p, h2, h3 {
+p,
+h2,
+h3 {
     color: #ffffff;
 }
 
- header {
+header {
     height: 75px;
 }
 
 /**HOMEPAGE**/
 #cog {
-	color: #5cb85c;
-	font-size: 7rem;
-	margin-left: 83px;
+    color: #5cb85c;
+    font-size: 7rem;
+    margin-left: 83px;
 }
 
 #manager {
-	color: #5cb85c;
-	
+    color: #5cb85c;
+
 }
 
 #friends {
-	color: #3bb4d8;
-	font-size: 7rem;
-	margin-left: 50px;
+    color: #3bb4d8;
+    font-size: 7rem;
+    margin-left: 50px;
 }
 
 #guest {
-	color: #3bb4d8;
+    color: #3bb4d8;
 }
 
 .fa-trophy {
-	color: #f0ad4e;
+    color: #f0ad4e;
 }
 
 #hpTitle {
-	margin: 30px;
+    margin: 30px;
 }
 
 
 /**past/on going tables**/
 #competitionDisplay {
-	display: flex;
-	justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 h5 {
-	color: white;
+    color: white;
 }
 
 #publicComps {
-	margin-top: 50px;
+    margin-top: 50px;
 }
 
 /**form create competition**/
-form[name=competition_form]{
-padding: 0.5rem;
-margin: 0 auto;
+form[name=competition_form] {
+    padding: 0.5rem;
+    margin: 0 auto;
 }
 
 .news {
     background: #354141;
     position: relative;
     overflow: hidden;
-    z-index:1;
-    transition: all 0.5s ease;	
+    z-index: 1;
+    transition: all 0.5s ease;
     color: #4A4A4A;
     border: 1px solid #E8E8E8;
     border-radius: 0.5rem;
-  }
-  
-  .news:hover{
-    box-shadow: 0px 21px 36px -14px rgba(220,220,220,1);;
-  
-  }
-  
-  
-  .news .img-figure {
-      position: relative;
-  }
-  
-  .news .img-figure img {
-      position: relative;	
-      overflow: hidden;
-      transition: all 1s ease;
-  }
-  
-  .news:hover .img-figure img {
-      transform: scale(1.10);
-  }
-  
-  .news .title {
-      /*padding: 29px 30px;*/
-      padding: 20px 20px;
-      position: absolute;
-      left: 0;
-      background: #fff;
-      width: 100%;
-      height: 100%;
-      transition: all 0.5s ease;	
-  }
-  
-  
-  .news .title {
-    font-size:12px;
-    color:#929292;
-  
-  }
-  .news .title h1 {
-      margin: 10px 0 0;
-      text-transform: uppercase;
-      font-weight: bold;
-      font-size: 19px;
-      color: #4A4A4A;
-      text-align: left;
-      transition: all 0.5s ease;	
-  }
-  
-  .news:hover .title  {
-      margin-top: -100px;
-      background: #fff;
-      cursor:pointer;
-  }
-  
-  
-  .news:hover .title h1  {
-    color: #0085FF; 
-  }
-  
-  .news  p.description {
-      position: relative;
-      font-weight: normal;
-      line-height: 22px;
-      opacity: 0;
-  
-      text-align: left;
-  
-      padding: 15px 20px 0px 20px;
-      transition: all 0.5s ease;	
-  }
-  
-  .news:hover p.description  {
-      opacity: 1;
-      margin-top: -10px;
-  }
-  
-  p.more {
-      text-align: left;
-      margin-left:20px;
-  }
-  
-  .more a {
-      position: relative;
-      font-size: 13px;
-      margin-top: 30px;
-      display: block;
-      -o-transition: all 0.5s ease;
-      transition: all 0.5s ease;
-      display: inline-block;
-      color: #929292;
-      padding: 6px 16px;
-      border: 1px solid #929292;
-      text-decoration: none;
-  }
-  
-  
-  .news:hover .more a {
-    background:#4A4A4A;
-    color:white;
-  }
-  
-  
-  
-  .cat {
-      background: #DCDCDC;
-      color: #4A4A4A;
-      text-transform: uppercase;
-      position: absolute;
-      left: 0;
-      top: 20px;
-      z-index: 1;
-      padding: 6px 16px;
-      opacity:.8;
-      transition: all 0.5s ease;	
-  }
-  
-  /**form create competition**/
-  form[name=competition_form]{
-  padding: 0.5rem;
-  margin: 0 auto;
-  }
-  
-#createForm{
-	margin: auto;
-	border: 3px solid #4E5D6C;
-	padding: 30px;
-	border-radius: 10px;
-	width: 60%;
+}
+
+.news:hover {
+    box-shadow: 0px 21px 36px -14px rgba(220, 220, 220, 1);
+    ;
+
+}
+
+
+.news .img-figure {
+    position: relative;
+}
+
+.news .img-figure img {
+    position: relative;
+    overflow: hidden;
+    transition: all 1s ease;
+}
+
+.news:hover .img-figure img {
+    transform: scale(1.10);
+}
+
+.news .title {
+    /*padding: 29px 30px;*/
+    padding: 20px 20px;
+    position: absolute;
+    left: 0;
+    background: #fff;
+    width: 100%;
+    height: 100%;
+    transition: all 0.5s ease;
+}
+
+
+.news .title {
+    font-size: 12px;
+    color: #929292;
+
+}
+
+.news .title h1 {
+    margin: 10px 0 0;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 19px;
+    color: #4A4A4A;
+    text-align: left;
+    transition: all 0.5s ease;
+}
+
+.news:hover .title {
+    margin-top: -100px;
+    background: #fff;
+    cursor: pointer;
+}
+
+
+.news:hover .title h1 {
+    color: #0085FF;
+}
+
+.news p.description {
+    position: relative;
+    font-weight: normal;
+    line-height: 22px;
+    opacity: 0;
+
+    text-align: left;
+
+    padding: 15px 20px 0px 20px;
+    transition: all 0.5s ease;
+}
+
+.news:hover p.description {
+    opacity: 1;
+    margin-top: -10px;
+}
+
+p.more {
+    text-align: left;
+    margin-left: 20px;
+}
+
+.more a {
+    position: relative;
+    font-size: 13px;
+    margin-top: 30px;
+    display: block;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+    display: inline-block;
+    color: #929292;
+    padding: 6px 16px;
+    border: 1px solid #929292;
+    text-decoration: none;
+}
+
+
+.news:hover .more a {
+    background: #4A4A4A;
+    color: white;
+}
+
+
+
+.cat {
+    background: #DCDCDC;
+    color: #4A4A4A;
+    text-transform: uppercase;
+    position: absolute;
+    left: 0;
+    top: 20px;
+    z-index: 1;
+    padding: 6px 16px;
+    opacity: .8;
+    transition: all 0.5s ease;
+}
+
+/**form create competition**/
+form[name=competition_form] {
+    padding: 0.5rem;
+    margin: 0 auto;
+}
+
+#createForm {
+    margin: auto;
+    border: 3px solid #4E5D6C;
+    padding: 30px;
+    border-radius: 10px;
+    width: 60%;
 }
 
 #competition_form label {
-	margin-right: 1rem;
-	font-size: 1.2rem;
+    margin-right: 1rem;
+    font-size: 1.2rem;
 }
 
 #competition_form_submit {
 
-	margin-top: 1rem;
-	padding: 0.7rem;
-	border-radius: 1rem;
-	font-size: 1.3rem;
+    margin-top: 1rem;
+    padding: 0.7rem;
+    border-radius: 1rem;
+    font-size: 1.3rem;
 }
 
 .news:hover .cat {
-	background: #0085FF;
-	color: white;
+    background: #0085FF;
+    color: white;
 }
 
 .carta {
-	padding-right: 0;
-	padding-left: 0;
+    padding-right: 0;
+    padding-left: 0;
 }
 
 /**footer**/
@@ -267,182 +269,207 @@ footer {
     padding: 0rem;
     position: fixed;
     bottom: 0px;
-    
-    /* Maybe: position: fixed-bottom; */ 
-} 
 
-#footer p{
-	margin-bottom: 0px;
+    /* Maybe: position: fixed-bottom; */
+}
+
+#footer p {
+    margin-bottom: 0px;
 }
 
 /**Register**/
 #registerTitle {
-	color: #f0ad4e;
-	text-align: center;
-	text-decoration: underline;
-	margin-bottom: 30px;
+    color: #f0ad4e;
+    text-align: center;
+    text-decoration: underline;
+    margin-bottom: 30px;
 }
 
 #registerForm {
-	border: 3px solid #f0ad4e;
-	border-radius: 1rem;
-	padding: 10px;
-	color: white;
+    border: 3px solid #f0ad4e;
+    border-radius: 1rem;
+    padding: 10px;
+    color: white;
 }
 
 #fos_user_registration_form div {
-	display: flex;
-	justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 #fos_user_registration_form div input {
-	margin-bottom: 10px;
-	margin-left: 7px;
+    margin-bottom: 10px;
+    margin-left: 7px;
 }
 
 /**Login**/
 #loginTitle {
-	color: #f0ad4e;
-	text-align: center;
-	text-decoration: underline;
-	margin-bottom: 30px;
+    color: #f0ad4e;
+    text-align: center;
+    text-decoration: underline;
+    margin-bottom: 30px;
 }
 
 #loginForm {
-	border: 3px solid #f0ad4e;
-	border-radius: 1rem;
-	padding: 10px;
-	color: white;
+    border: 3px solid #f0ad4e;
+    border-radius: 1rem;
+    padding: 10px;
+    color: white;
 }
 
 #loginForm form input {
-	display: block;
+    display: block;
 }
 
 #logRegister {
-	color: white;
+    color: white;
 }
 
 #remember_me {
-	margin-top: 10px;
+    margin-top: 10px;
 }
 
 #userLinks {
-	display: flex;
-	justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
-#userLinks a {
-}
+#userLinks a {}
 
 /**SearchResults**/
 #search {
-	margin-top: 10px;
+    margin-top: 10px;
 }
 
 /**Information for new users**/
 #information {
-	margin-bottom: 30px;
-	margin-top: 30px;
-	border: 3px solid #4E5D6C;
-	border-radius: 1rem;
-	padding: 10px;
-	text-align: center;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    border: 3px solid #4E5D6C;
+    border-radius: 1rem;
+    padding: 10px;
+    text-align: center;
 }
 
 #information ul {
-	list-style: none;
+    list-style: none;
 }
 
-#information ul li {
-	
-}
+#information ul li {}
 
 #information ul li b {
-	color: black;
+    color: black;
 }
 
 #about {
-	margin-top: 2rem;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-evenly;
+    margin-top: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 #about div {
-	width: 85%;
+    width: 85%;
 }
 
 #about img {
-	height: 230px;
-	width: 230px;
+    height: 230px;
+    width: 230px;
 
 }
 
 @media (min-width: 992px) {
-	#about div {
-		width: 50%;
-	}
+    #about div {
+        width: 50%;
+    }
 
-	#about img {
-		height: 450px;
-		width: 450px;
+    #about img {
+        height: 450px;
+        width: 450px;
 
-	}
+    }
 }
+
 /*CompetitionView**/
 .table {
-	border: 2px solid white;
+    border: 2px solid white;
 }
 
 .table th {
-	background-color: #DF691A;
-	color: #000;
+    background-color: #DF691A;
+    color: #000;
 }
 
 #matchDays {
-	display: flex;
-	flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .matchDay {
-	margin-right: 0px;
-	width: 900px;
-	border: 2px solid #f0ad4e;
-	border-radius: 20px;
-	margin: 20px;
-	padding: 15px;
-	margin-top: 75px;
+    margin-right: 0px;
+    width: 20rem;
+    border: 2px solid #f0ad4e;
+    border-radius: 20px;
+    margin: 20px;
+    padding: 15px;
+    margin-top: 75px;
 }
 
 .marginFix {
-	width: 40px;
-	padding-right: 10px;
+    width: 40px;
+    padding-right: 10px;
 }
 
-.tHead {
-	
+.matchDay table,
+.matchDay th {
+    width: 100%;
 }
 
-td{
+.matchDay td {
+    column-span: 4;
+}
 
-}	
+.teamName {
+    width: 40%;
+}
 
-/**HOMEPAGE OVERWRITE*//
+.away {
+    text-align: right;
+}
+
+/*CompetitionEdit*/
+#editResults {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#editForm article {
+    width: 100%;
+    margin: auto;
+}
+
+#updateBtn {
+    width: 100%;
+}
+
+.matchDay td input {
+    width: 2rem;
+}
+
+/**HOMEPAGE OVERWRITE*/
 .darkGrey {
-	background-color: grey !important;
-	color: white;
+    background-color: grey !important;
+    color: white;
 }
 
-#ui-id-1{
-	width:20rem;
-	background-color: white;
-	color:black;
-	list-style:none;
-	padding:0.3rem;
+#ui-id-1 {
+    width: 20rem;
+    background-color: white;
+    color: black;
+    list-style: none;
+    padding: 0.3rem;
 }
 
-.ui-helper-hidden-accessible{
-	display:none;
+.ui-helper-hidden-accessible {
+    display: none;
 }
-
