--- a/templates/Competition/manage.html.twig
+++ b/templates/Competition/manage.html.twig
@@ -1,26 +1,37 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
-<form method="POST">
-	{% for matchday in table2 %}
-	<h3>
-		{{ matchday[0] }}
-	</h3>
-	<table>
-		<tbody>
-			<tr>
-				{% for encounter in matchday[1]  %}
-				<td>{{ encounter[0] }}</td>
-				<td><input value="{{ encounter[1] }}" name="{{ encounter[0]~loop.parent.loop.index }}" /></td>
-				<td><input value="{{ encounter[2] }}" name="{{ encounter[3]~loop.parent.loop.index }}" /></td>
-				<td>{{ encounter[3] }}</td>
-				{% endfor %}
-			</tr>
-		</tbody>
-	</table>
-	{% endfor %}
-	<button class="btn" type="submit">Update</button>
-</form>
-
+    <div class="container">
+        <form method="POST">
+            <section id="editResults">
+                {% for matchday in table2 %}
+                    <section class="matchDay">
+                        <table>
+                            <thead>
+                                <th colspan="5">{{ matchday[0] }}</th>
+                            </thead>
+                            <tbody>
+                                {% for encounter in matchday[1]  %}
+                                    <tr>
+                                        <td class="teamName">{{ encounter[0] }}</td>
+                                        <td><input value="{{ encounter[1] }}" name="{{ encounter[0]~loop.parent.loop.index }}"/></td>
+                                        <td>-</td>
+                                        <td><input value="{{ encounter[2] }}" name="{{ encounter[3]~loop.parent.loop.index }}"/></td>
+                                        <td class="teamName away">{{ encounter[3] }}</td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </section>
+                {% endfor %}
+            </section>
+            <article>
+                <div class="row justify-content-center">
+                    <div class="col-3">
+                        <button class="btn btn-success btn-sm" id="updateBtn" type="submit">Update</button>
+                    </div>
+                </div>
+            </article>
+        </form>
+    </div>
 {% endblock %}
