--- a/templates/Competition/view.html.twig
+++ b/templates/Competition/view.html.twig
@@ -1,65 +1,60 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<div class="container">
-	
-    	<table class="table">
-    		<thead>
-    			<tr>
-    				<th>pos</th>
-    				<th>name</th>
-    				<th>points</th>
-    				<th>scored</th>
-    				<th>got scored</th>
-    				<th>score diff</th>
-    			</tr>
-    		</thead>
-    		<tbody>
-    			{% for competitor in table %}
-    				<tr>
-    					<td>{{ loop.index }}</td>
-    					<td>{{ competitor[0] }}</td>
-    					<td>{{ competitor[1] }}</td>
-    					<td>{{ competitor[2] }}</td>
-    					<td>{{ competitor[3] }}</td>
-    					<td>{{ competitor[2]-competitor[3] }}</td>
-    				</tr>
-    			{% endfor %}
-    		</tbody>
-    	</table>
-    	
-    	
-    	
-        	<section id="matchDays">
-        	{% for matchday in table2 %}
-        		<section class="matchDay">
-                	<table>
-                		<thead>
-                			<th class="tHead">{{ matchday[0] }}</th>
-                		</thead>
-                    		<tbody>
-                    			{% for encounter in matchday[1]  %}
-                    			<tr>
-                    				<td class="marginFix">{{ encounter[0] }}</td>
-                    				<td>{{ encounter[1] }}</td>
-                    				<td> - </td>
-                    				<td>{{ encounter[2] }}</td>
-                    				<td>  </td>
-                    				<td>{{ encounter[3] }}</td>
-                    			</tr>
-                    			{% endfor %}
-                    		</tbody>
-                	</table>
-                </section>
-    	    {% endfor %}
-        	</section>
-	</div>
-	
-	<section style="height: px">
-	</section>
+    <div class="container">
 
-	
-	<div id="mapContainer">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>pos</th>
+                    <th>name</th>
+                    <th>points</th>
+                    <th>scored</th>
+                    <th>got scored</th>
+                    <th>score diff</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for competitor in table %}
+                    <tr>
+                        <td>{{ loop.index }}</td>
+                        <td>{{ competitor[0] }}</td>
+                        <td>{{ competitor[1] }}</td>
+                        <td>{{ competitor[2] }}</td>
+                        <td>{{ competitor[3] }}</td>
+                        <td>{{ competitor[2]-competitor[3] }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+
+
+        <section id="matchDays">
+            {% for matchday in table2 %}
+                <section class="matchDay">
+                    <table>
+                        <thead>
+                            <th colspan="5">{{ matchday[0] }}</th>
+                        </thead>
+                        <tbody>
+                            {% for encounter in matchday[1]  %}
+                                <tr>
+                                    <td class="teamName">{{ encounter[0] }}</td>
+                                    <td>{{ encounter[1] }}</td>
+                                    <td>
+                                        -
+                                    </td>
+                                    <td>{{ encounter[2] }}</td>
+                                    <td class="teamName away">{{ encounter[3] }}</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </section>
+            {% endfor %}
+        </section>
+    </div>
+    <div id="mapContainer">
         {% include 'mapbox.html.twig' %}
-	</div>
+    </div>
 {% endblock %}
