ManageRefactoring done and tested

--- a/templates/Competition/manage.html.twig
+++ b/templates/Competition/manage.html.twig
@@ -4,7 +4,7 @@
     <div class="container">
         <form method="POST">
             <section id="editResults">
-                {% for matchday in $matchDayTable %}
+                {% for matchday in matchDayTable %}
                     <section class="matchDay">
                         <table>
                             <thead>
